# length_prefixed_protobuf_stream_parsing

./: CMakeLists.txt  README.md  message.proto  parser.h  serialize.h  start.sh
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp  test_parser.cpp
